--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <tr>
             <td>6h30 - 9h00</td>
             <td>📖 Tự học / Ôn bài</td>
-            <td>📊 Kinh tế Lượng</td>
-            <td>💰 Tài chính Công</td>
-            <td>🏦 Quản trị Ngân hàng Thương mại 2</td>
-            <td>📜 Thuế</td>
+            <td><bold>📊 Kinh tế Lượng</bold>bold></td>
+            <td><bold>💰 Tài chính Công</bold>bold></td>
+            <td><bold>🏦 Quản trị Ngân hàng Thương mại 2</bold>bold></td>
+            <td><bold>📜 Thuế</bold>bold></td>
             <td>📚 Tự học hoặc giải trí</td>
             <td>📚 Tự học hoặc giải trí</td>
         </tr>
@@ -119,11 +119,11 @@
         </tr>
         <tr>
             <td>9h20 - 12h00</td>
-            <td>📕 Lịch sử Đảng</td>
-            <td>🗣️ Tiếng Anh Chuyên ngành</td>
-            <td>📈 Quản trị Tài chính 1</td>
+            <td><bold>📕 Lịch sử Đảng</bold>bold></td>
+            <td><bold>🗣️ Tiếng Anh Chuyên ngành</bold>bold></td>
+            <td><bold>📈 Quản trị Tài chính 1</bold>bold></td>
             <td>📘 Tự học TOEIC / Ôn bài</td>
-            <td>🔖 Bảo hiểm</td>
+            <td><bold>🔖 Bảo hiểm</bold>bold></td>
             <td>🎮 Tự học / Giải trí</td>
             <td>🎮 Tự học / Giải trí</td>
         </tr>
@@ -141,7 +141,7 @@
             <td>13h30 - 17h00</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
-            <td>Bóng chuyền 🏐</td>
+            <td><bold>Bóng chuyền 🏐</bold>bold></td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td>🎮 Giải trí / Thư Giãn</td>
