--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         th {
             background-color: #ffccd5;
             color: #6a1b3f;
-            font-weight: bold;
+            font-weight: b;
         }
 
         tr:nth-child(even) {
@@ -100,10 +100,10 @@
         <tr>
             <td>6h30 - 9h00</td>
             <td>📖 Tự học / Ôn bài</td>
-            <td><bold>📊 Kinh tế Lượng</bold></td>
-            <td><bold>💰 Tài chính Công</bold></td>
-            <td><bold>🏦 Quản trị Ngân hàng Thương mại 2</bold></td>
-            <td><bold>📜 Thuế</bold></td>
+            <td><b>📊 Kinh tế Lượng</b></td>
+            <td><b>💰 Tài chính Công</b></td>
+            <td><b>🏦 Quản trị Ngân hàng Thương mại 2</b></td>
+            <td><b>📜 Thuế</b></td>
             <td>📚 Tự học hoặc giải trí</td>
             <td>📚 Tự học hoặc giải trí</td>
         </tr>
@@ -119,11 +119,11 @@
         </tr>
         <tr>
             <td>9h20 - 12h00</td>
-            <td><bold>📕 Lịch sử Đảng</bold></td>
-            <td><bold>🗣️ Tiếng Anh Chuyên ngành</bold></td>
-            <td><bold>📈 Quản trị Tài chính 1</bold></td>
+            <td><b>📕 Lịch sử Đảng</b></td>
+            <td><b>🗣️ Tiếng Anh Chuyên ngành</b></td>
+            <td><b>📈 Quản trị Tài chính 1</b></td>
             <td>📘 Tự học TOEIC / Ôn bài</td>
-            <td><bold>🔖 Bảo hiểm</bold></td>
+            <td><b>🔖 Bảo hiểm</b></td>
             <td>🎮 Tự học / Giải trí</td>
             <td>🎮 Tự học / Giải trí</td>
         </tr>
@@ -141,7 +141,7 @@
             <td>13h30 - 17h00</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
-            <td><bold>Bóng chuyền 🏐</bold></td>
+            <td><b>Bóng chuyền 🏐</b></td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td>🎮 Giải trí / Thư Giãn</td>
