--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <tr>
             <td>6h30 - 9h00</td>
             <td>📖 Tự học / Ôn bài</td>
-            <td><b>📊 Kinh tế Lượng</b></td>
-            <td><b>💰 Tài chính Công</b></td>
-            <td><b>🏦 Quản trị Ngân hàng Thương mại 2</b></td>
-            <td><b>📜 Thuế</b></td>
+            <td style="color:red"><b>📊 Kinh tế Lượng</b></td>
+            <td style="color:red"><b>💰 Tài chính Công</b></td>
+            <td style="color:red"><b>🏦 Quản trị Ngân hàng Thương mại 2</b></td>
+            <td style="color:red"><b>📜 Thuế</b></td>
             <td>📚 Tự học hoặc giải trí</td>
             <td>📚 Tự học hoặc giải trí</td>
         </tr>
@@ -119,11 +119,11 @@
         </tr>
         <tr>
             <td>9h20 - 12h00</td>
-            <td><b>📕 Lịch sử Đảng</b></td>
-            <td><b>🗣️ Tiếng Anh Chuyên ngành</b></td>
-            <td><b>📈 Quản trị Tài chính 1</b></td>
+            <td style="color:red"><b>📕 Lịch sử Đảng</b></td>
+            <td style="color:red"><b>🗣️ Tiếng Anh Chuyên ngành</b></td>
+            <td style="color:red"><b>📈 Quản trị Tài chính 1</b></td>
             <td>📘 Tự học TOEIC / Ôn bài</td>
-            <td><b>🔖 Bảo hiểm</b></td>
+            <td style="color:red"><b>🔖 Bảo hiểm</b></td>
             <td>🎮 Tự học / Giải trí</td>
             <td>🎮 Tự học / Giải trí</td>
         </tr>
@@ -141,7 +141,7 @@
             <td>13h30 - 17h00</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
-            <td><b>Bóng chuyền 🏐</b></td>
+            <td style="color:red"><b>Bóng chuyền 🏐</b></td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td> Tự học TOEIC / Ôn bài 📗</td>
             <td>🎮 Giải trí / Thư Giãn</td>
